--- a/src/View/User/login.html.twig
+++ b/src/View/User/login.html.twig
@@ -18,4 +18,7 @@
         </form>
     </div>
 </div>
+{% for field, error in errors %}
+    {{field }} : {{ error }} <br>
+{% endfor %}
 {%  endblock %}
